--- a/style.css
+++ b/style.css
@@ -2,24 +2,50 @@
 
 * {
   box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
 body {
   background-color: #141414;
   font-family: 'Poppins', sans-serif;
+  color: #f5f5f5;
+  height: 100vh;
+  margin: 0;
+}
+
+.welcome-container {
+  height:100vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  overflow: hidden;
-  margin: 0;
+
+}
+
+.welcome-container button {
+  margin: 0 auto;
+  border-radius: 70px;
+  font-weight: 750;
+  
+}
+
+.welcome-container a {
+  text-decoration: none;
+  color:#f5f5f5
+}
+
+.other-container {
+  height:100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .quiz-container {
   border-radius: 50px;
   width: 600px;
   overflow: hidden;
-  color: #f5f5f5;
 }
 
 .quiz-header {
