--- a/style.css
+++ b/style.css
@@ -22,11 +22,18 @@ body {
 
 }
 
-.welcome-container button {
+.welcome-container a {
   margin: 0 auto;
   border-radius: 70px;
   font-weight: 750;
-  
+  padding: 20px 50px;
+  border: solid;
+  border-width: 2px;
+  border-color: #f5f5f5;
+}
+
+.welcome-container a:hover {
+  background-color: #0073cf;
 }
 
 .welcome-container a {
